fix bug on ios (thanks safari)

--- a/_src/assets/index.css
+++ b/_src/assets/index.css
@@ -1198,7 +1198,8 @@ table th:last-of-type {
         gap: 10px;
     }
     .other-tools {
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: 1fr;
     }
 }
 
